Rename files and add default theme

--- a/toth-template/index.html
+++ b/toth-template/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-    <title>doki</title>
+    <title>toth - Style Guide</title>
     <script src="js/handlebars.js"></script>
     <script src="js/jquery.js"></script>
     <link rel="stylesheet" href="css/tomorrow.min.css">
@@ -12,8 +12,8 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/sanilize.min.css">
     <link rel="stylesheet" href="css/typ.min.css">
-    <link rel="stylesheet" href="css/doki.css">
-    <script src="js/doki.js"></script>
+    <link rel="stylesheet" href="css/toth.css">
+    <script src="js/toth.js"></script>
   </head>
   <body class="toth-body">
     <aside class="toth-navbar">
