--- a/toth-template/index.html
+++ b/toth-template/index.html
@@ -3,15 +3,15 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
     <title>toth - Style Guide</title>
-    <script src="js/handlebars.js"></script>
-    <script src="js/jquery.js"></script>
-    <link rel="stylesheet" href="css/tomorrow.min.css">
-    <script src="js/highlight.js"></script>
-    <script src="js/load.js"></script>
+    <script src="js/vendor/handlebars.min.js"></script>
+    <script src="js/vendor/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/vendor/tomorrow.min.css">
+    <script src="js/vendor/highlight.min.js"></script>
+    <script src="js/vendor/load.min.js"></script>
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/sanilize.min.css">
-    <link rel="stylesheet" href="css/typ.min.css">
+    <link rel="stylesheet" href="css/vendor/sanilize.min.css">
+    <link rel="stylesheet" href="css/vendor/typ.min.css">
     <link rel="stylesheet" href="css/toth.css">
     <script src="js/toth.js"></script>
   </head>
