--- a/toth/index.html
+++ b/toth/index.html
@@ -5,7 +5,7 @@
     <title>toth - Style Guide</title>
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="toth.css">
+    <link rel="stylesheet" href="toth.min.css">
 
       <link rel="stylesheet" href="//filipelinhares.github.io/toth-example/demo/css/style.css">
       <script href=""></script>
@@ -152,6 +152,6 @@
           </section>
       </section>
     </div>
-    <script src="toth.js"></script>
+    <script src="toth.min.js"></script>
   </body>
 </html>
